--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -1,23 +1,29 @@
+{% extends 'base.html' %}
 
-<a href="{% url 'home' %}">
-    Home
-</a>
+{% block content %}
 
-<dl>
-    <dt>Company</dt>
-    <dd><a href="{{object.company_url}}" target="_blank">
-        {{object.company_name}}</a>
-    </dd>
+    <a href="{% url 'home' %}">
+        Home
+    </a>
+    
+    <dl>
+        <dt>Company</dt>
+        <dd><a href="{{object.company_url}}" target="_blank">
+            {{object.company_name}}</a>
+        </dd>
+    
+        <dt>Description</dt>
+        <dd>{{object.description|linebreaks}}</dd>
+    
+        <dt>Tags</dt>
+        <dd>{{object.tag_list}}</dd>
+    
+        <dt></dt>
+        <dd></dd>
+    
+        <dt></dt>
+        <dd></dd>
+    </dl>
+    
+{% endblock %}
 
-    <dt>Description</dt>
-    <dd>{{object.description|linebreaks}}</dd>
-
-    <dt>Tags</dt>
-    <dd>{{object.tag_list}}</dd>
-
-    <dt></dt>
-    <dd></dd>
-
-    <dt></dt>
-    <dd></dd>
-</dl>
