--- a/ads/templates/ads/ad_form.html
+++ b/ads/templates/ads/ad_form.html
@@ -1,7 +1,12 @@
-<form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Post" />
-</form>
+{% extends 'base.html' %}
 
+{% block content %}
+
+    <form method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Post" />
+    </form>
+
+{% endblock %}
 
