--- a/ads/templates/ads/ad_list.html
+++ b/ads/templates/ads/ad_list.html
@@ -1,9 +1,17 @@
-<ul>
-    {% for o in object_list %}
-      <li>
-          <a href="{{o.get_absolute_url}}">
-              {{o.title}}
-          </a>
-      </li>
-    {% endfor %}
-</ul>
+{% extends 'base.html' %}
+
+{% block content %}
+    <a href="{% url 'post_ad' %}">
+        Post a new ad
+    </a>
+    <ul>
+        {% for o in object_list %}
+          <li>
+              <a href="{{o.get_absolute_url}}">
+                  {{o.title}}
+              </a>
+          </li>
+        {% endfor %}
+    </ul>
+
+{% endblock %}
